--- a/public/index.scss
+++ b/public/index.scss
@@ -9,6 +9,7 @@
 @import "components/Profile/Profile";
 @import "components/ProfileSettings/ProfileSettings";
 @import "views/HomeView/HomeView";
+@import "css/admin";
 @import "views/ProfileView/ProfileView";
 @import "vars";
 
