--- a/public/css/admin.scss
+++ b/public/css/admin.scss
@@ -1,3 +1,6 @@
+$admin-back-color: #E5E8EC;
+$admin-dark-back-color: #0F0F1F;
+
 /** edit start **/
 
 .edit {
@@ -149,7 +152,7 @@ table th:first-child {
 
 /** main end **/
 
-body {
+.admin-body {
   margin: 0;
   font-family: Verdana, sans-serif;
   font-style: normal;
@@ -167,7 +170,7 @@ a {
           'nav header'
           'nav content';
   grid-template-rows: 1fr 6fr;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
   height: 100vh;
 }
 
@@ -181,13 +184,18 @@ a {
   grid-area: nav;
 }
 
-.header {
+.nav-aside {
+  background-color: $admin-back-color;
+  height: 100vh;
+}
+
+.admin-header-area {
   padding: 20px 30px;
   grid-area: header;
   background: #E5E8EC;
 }
 
-.content {
+.admin-content-area {
   padding: 20px 30px;
   grid-area: content;
   background: #E5E8EC;
@@ -209,6 +217,7 @@ a {
   height: 60px;
   border-radius: 50%;
   background: #0F0F1F;
+  cursor: pointer;
 }
 
 .nav_menu_home {
@@ -234,17 +243,17 @@ a {
   color: #FFFFFF;
 }
 
-.nav_list > a > div{
-  padding: 10px;
-  height: 35px;
-
+.nav_list-item {
+  cursor: pointer;
+  margin-bottom: 5px;
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
 }
 
-.nav_list > a {
-  color: #FFFFFF;
-}
-
-.nav_list > a > div:hover {
+.nav_list-item:hover {
+  background-color: $admin-dark-back-color;
   font-size: 28px;
 }
 
@@ -256,19 +265,19 @@ a {
 
 /*Header styles*/
 
-.header {
+.admin-header {
   display: grid;
   grid-template-areas: 'h3 button-add';
   grid-template-columns: 7fr 1fr;
 }
 
-.header_h3 {
+.admin-header_h3 {
   grid-area: h3;
   margin-top: auto;
   margin-bottom: auto;
 }
 
-.btn_add {
+.btn-area_add {
   grid-area: button-add;
 }
 
