--- a/public/views/AdminView/AdminView.pug
+++ b/public/views/AdminView/AdminView.pug
@@ -1,4 +1,3 @@
-div(class="grid-container")
+div(class="grid-container admin-body")
 	div(class="nav" id="admin-nav")
-	div(class="header" id="admin-header")
-	div(class="content" id="admin-content")
+	div(class="nav-aside" id="admin-nav-aside")
