--- a/public/index.scss
+++ b/public/index.scss
@@ -154,7 +154,9 @@
     font-weight: bold;
 }
 
-
+.btn {
+    cursor: pointer;
+}
 /******************* form start *******************/
 
 .form_background {
