--- a/public/components/Admin/Lists/ArtistList/ArtistList.pug
+++ b/public/components/Admin/Lists/ArtistList/ArtistList.pug
@@ -21,3 +21,5 @@ div
                                             img(alt="delete-icon" src="img/admin/delete.png")
                             else
                                 td #{item[column.dataIndex]}
+
+            div(id="pagination")
