--- a/public/index.scss
+++ b/public/index.scss
@@ -8,6 +8,7 @@
 @import "components/NewHeader/NewHeader";
 @import "components/Profile/Profile";
 @import "components/ProfileSettings/ProfileSettings";
+@import "components/Pagination/Pagination";
 @import "views/HomeView/HomeView";
 @import "css/admin";
 @import "views/ProfileView/ProfileView";
