--- a/public/components/Admin/Menu/Menu.pug
+++ b/public/components/Admin/Menu/Menu.pug
@@ -1,10 +1,10 @@
 div(class="nav")
     div(class="nav_menu")
-        div(class="nav_menu_item nav_menu_home")
+        div(class="nav_menu_item nav_menu_home" id="home-link")
             img(alt="home-icon" src="img/admin/home.png")
-        div(class="nav_menu_item nav_menu_account")
+        div(class="nav_menu_item nav_menu_account" id="profile-link")
             img(alt="account-icon" src="img/admin/account.png")
-        div(class="nav_menu_item nav_menu_exit")
+        div(class="nav_menu_item nav_menu_exit" id="logout-link")
             img(alt="exit-icon" src="img/admin/exit.png")
     div(class="nav_list")
         each item in items
