--- a/public/components/NewHeader/NewHeader.pug
+++ b/public/components/NewHeader/NewHeader.pug
@@ -3,7 +3,7 @@ div(class="header header-grid")
 		div(class="header__search-container-inner table-cell")
 			div(class="search table")
 				div(class="seach__img-container table-cell")
-					img(class="search__img" src="img/search-purple.png" alt="img")
+					img(class="search__img" src="/img/search-purple.png" alt="img")
 				input(class="search__input" type="text" placeholder="Search")
 	div(class="header__user-container")
 		if (!user)
