--- a/public/components/Admin/Editors/ArtistEditor/ArtistEditor.pug
+++ b/public/components/Admin/Editors/ArtistEditor/ArtistEditor.pug
@@ -2,11 +2,12 @@ div
 	div(class="admin-header admin-header-area")
 		h3(class="admin-header_h3")="Edit artist"
 	div(class="admin-content-area")
-		form(class="edit" enctype="multipart/form-data")
-			label="Name"
-				input(class="edit_input" type="text" name="name")
-			label="Upload image of artist:"
-				input(class="upload_file" type="file" name="file")
-			button(class="eidt-btn btn_save" type="submit")="Save"
-			a(href="../admin_artists/admin_artists.html")
-				div(class="edit-btn btn_cancel")="Cancel"
+		form(class="form-edit" enctype="multipart/form-data")
+			div(class="form-edit__container")
+				label(class="form-edit__label")="Name"
+				input(class="form-edit__input" type="text" name="name")
+			div(class="form-edit__container")
+				label(class="form-edit__label")="Upload image of artist:"
+				input(class="form-edit__input" type="file" name="file")
+			button(class="edit-btn btn_save" type="submit" id="save-btn")="Save"
+			button(class="edit-btn btn_cancel" type="button" id="cancel-btn")="Cancel"
