autocomplete component, album list and album editor

--- a/public/components/Admin/Editors/AlbumEditor/AlbumEditor.pug
+++ b/public/components/Admin/Editors/AlbumEditor/AlbumEditor.pug
@@ -3,4 +3,8 @@ extends ../../../../common/Admin/ItemEditor/ItemEditor
 block content
 	div(class="form-edit__container")
 		label(class="form-edit__label")="Name"
-		input(class="form-edit__input" type="text" name="name" id='album-name-input' value=item.name)
+		div(class="form-edit__input-container")
+			input(class="form-edit__input" type="text" name="name" id='album-name-input' value=item.name)
+	div(class="form-edit__container")
+		label(class="form-edit__label")="Artist"
+		div(id="artist-autocomplete-id")
