--- a/public/index.scss
+++ b/public/index.scss
@@ -3,6 +3,7 @@
 @import url('components/LoginForm/LoginForm.css');
 @import url('components/EditableField/EditableField.css');
 @import url('components/TrackList/TrackList.css');
+@import "common/Autocomplete/Autocomplete";
 @import "components/Menu/Menu";
 @import "components/Home/AlbumList/AlbumList";
 @import "components/NewHeader/NewHeader";
