--- a/public/views/HomeView/HomeView.pug
+++ b/public/views/HomeView/HomeView.pug
@@ -4,3 +4,4 @@ div(class="wrapper" id="wrapper")
 		div(id="header")
 		div(class="content" id="content")
 div(class="player player-grid")
+div(id="popup")
