confirmation dialog, remove playlist

--- a/public/components/Content/Playlists/Playlists.pug
+++ b/public/components/Content/Playlists/Playlists.pug
@@ -11,5 +11,6 @@ div(class="content-cards")
 				div(class="card-item__container")
 					div(class="card-item__img")
 						img(src=item.photo alt="" class="card-item__img-inner")
-					div(class="card-item__title")=item.name
-					div(class="card-item__subtitle")=item.description
+						span(class="card-item__close" id="delete-playlist-btn-"+item.id) &times
+					div(class="card-item__title card-item__fix-width")=item.name
+					div(class="card-item__subtitle card-item__fix-width")=item.description
