--- a/public/index.scss
+++ b/public/index.scss
@@ -11,6 +11,7 @@
 @import "components/ProfileSettings/ProfileSettings";
 @import "components/Content/Playlists/Playlists";
 @import "components/Content/Playlists/PlaylistPopup/PlaylistPopup";
+@import "common/ConfirmationDialog/ConfirmationDialog";
 @import "components/Pagination/Pagination";
 @import "views/HomeView/HomeView";
 @import "css/admin";
