--- a/public/components/Content/Playlists/Playlists.scss
+++ b/public/components/Content/Playlists/Playlists.scss
@@ -14,6 +14,7 @@
 	vertical-align: top;
 	margin-bottom: 20px;
 	margin-right: 20px;
+	width: 160px;
   }
 
   &__container:hover {
@@ -21,6 +22,7 @@
   }
 
   &__img {
+	position: relative;
 	cursor: pointer;
 	margin-bottom: 10px;
   }
@@ -37,6 +39,12 @@
 	opacity: .5;
   }
 
+  &__fix-width {
+	overflow: hidden;
+	white-space: nowrap;
+	width: 100%;
+  }
+
   &__title {
 	font-size: 18px;
 	margin-bottom: 5px;
@@ -47,6 +55,21 @@
 	font-size: 14px;
 	color: $font-light-color;
 	transition: .3s;
+  }
+
+  &__close {
+	position: absolute;
+	color: $font-light-color;
+	right: 6px;
+	font-size: 28px;
+	font-weight: bold;
+  }
+
+  &__close:hover,
+  &__close:focus {
+	color: $font-color;
+	text-decoration: none;
+	cursor: pointer;
   }
 }
 
