file component, upload photo for artist and album

--- a/public/common/Autocomplete/Autocomplete.pug
+++ b/public/common/Autocomplete/Autocomplete.pug
@@ -1,3 +1,3 @@
 form(autocomplete="off")
 	div(class="autocomplete" style="width:400px;")
-		input(class="autocomplete-input" id="myInput" type="text" name="myCountry" placeholder="Artist Id")
+		input(class="autocomplete-input" id="myInput" type="text" name="myCountry" placeholder="Search")
