--- a/public/components/Admin/Editors/AlbumEditor/AlbumEditor.pug
+++ b/public/components/Admin/Editors/AlbumEditor/AlbumEditor.pug
@@ -1,10 +1,15 @@
 extends ../../../../common/Admin/ItemEditor/ItemEditor
 
 block content
+	div(id="album-file-container")
 	div(class="form-edit__container")
 		label(class="form-edit__label")="Name"
 		div(class="form-edit__input-container")
 			input(class="form-edit__input" type="text" name="name" id='album-name-input' value=item.name)
+	div(class="form-edit__container")
+		label(class="form-edit__label")="Year"
+		div(class="form-edit__input-container")
+			input(class="form-edit__input" type="text" name="name" id='album-year-input' value=item.year)
 	div(class="form-edit__container")
 		label(class="form-edit__label")="Artist"
 		div(id="artist-autocomplete-id")
