--- a/public/components/Admin/Editors/ArtistEditor/ArtistEditor.pug
+++ b/public/components/Admin/Editors/ArtistEditor/ArtistEditor.pug
@@ -2,8 +2,10 @@ extends ../../../../common/Admin/ItemEditor/ItemEditor
 
 block content
 	div(class="form-edit__container")
-		label(class="form-edit__label")="Name"
-		input(class="form-edit__input" type="text" name="name" id='artist-name-input' value=item.name)
-	div(class="form-edit__container")
 		label(class="form-edit__label")="Upload image of artist:"
-		input(class="form-edit__input" type="file" name="file" value=item.file)
+		div(id="artist-file-container")
+	div(class="form-edit__container")
+		label(class="form-edit__label")="Name"
+		div(class="form-edit__input-container")
+			input(class="form-edit__input" type="text" name="name" id='artist-name-input' value=item.name)
+
