--- a/public/components/Admin/Editors/TrackEditor/TrackEditor.pug
+++ b/public/components/Admin/Editors/TrackEditor/TrackEditor.pug
@@ -2,8 +2,12 @@ extends ../../../../common/Admin/ItemEditor/ItemEditor
 
 block content
 	div(class="form-edit__container")
-		label(class="form-edit__label")="Name"
-		input(class="form-edit__input" type="text" name="name" id='track-name-input' value=item.name)
+		label(class="form-edit__label")="Upload track:"
+		div(id="track-file-container")
 	div(class="form-edit__container")
-		label(class="form-edit__label")="Upload image of track:"
-		input(class="form-edit__input" type="file" name="file" value=item.file)
+		label(class="form-edit__label")="Name"
+		div(class="form-edit__input-container")
+			input(class="form-edit__input" type="text" name="name" id='track-name-input' value=item.name)
+	div(class="form-edit__container")
+		label(class="form-edit__label")="Album"
+		div(id="album-autocomplete-id")
