--- a/public/index.scss
+++ b/public/index.scss
@@ -13,6 +13,7 @@
 @import "components/Content/Playlists/PlaylistPopup/PlaylistPopup";
 @import "common/ConfirmationDialog/ConfirmationDialog";
 @import "components/Pagination/Pagination";
+@import "common/Kit/File/File";
 @import "views/HomeView/HomeView";
 @import "css/admin";
 @import "views/ProfileView/ProfileView";
