menu styles fixes

--- a/public/components/Menu/Menu.pug
+++ b/public/components/Menu/Menu.pug
@@ -1,4 +1,4 @@
-div(class="menu")
+div
 	div(class="menu-title")
 		div(class="menu-title__img")
 			img(class="logo" src="/img/record.png" alt="img")
