--- a/public/index.scss
+++ b/public/index.scss
@@ -12,6 +12,7 @@
 @import "components/Content/Playlists/Playlists";
 @import "components/Content/Playlists/PlaylistPopup/PlaylistPopup";
 @import "common/ConfirmationDialog/ConfirmationDialog";
+@import "components/Content/Home/Home";
 @import "components/Pagination/Pagination";
 @import "common/Kit/File/File";
 @import "views/HomeView/HomeView";
