--- a/public/views/HomeView/HomeView.pug
+++ b/public/views/HomeView/HomeView.pug
@@ -1,5 +1,5 @@
-div(class="wrapper" id="wrapper")
-	div(id="menu")
+div(class="wrapper wrapper-grid" id="wrapper")
+	div(class="menu" id="menu")
 	div(class="content-container content-container-grid")
 		div(id="header")
 		div(class="content" id="content")
