--- a/public/components/Menu/Menu.scss
+++ b/public/components/Menu/Menu.scss
@@ -1,15 +1,13 @@
 @import "../../vars";
 
 .menu {
-  position: fixed;
-  width: 250px;
+  grid-column: menu;
 }
 
 .menu-title {
   padding-left: 20px;
   padding-right: 20px;
   display: table;
-  width: 100%;
   height: $header-height;
   font-size: 24px;
   font-weight: 800;
@@ -32,6 +30,7 @@
   width: 40px;
   height: 40px;
   vertical-align: middle;
+  margin-right: 10px;
 }
 
 .menu-list {
