--- a/public/index.scss
+++ b/public/index.scss
@@ -49,6 +49,7 @@
     --google-color: #dd4b39;
     --twitter-color: #55ACEE;
 
+    --gutter: 50px;
 
     --logo-font: Megrim;
     --main-font: Montserrat;
