--- a/public/components/Content/Home/Home.pug
+++ b/public/components/Content/Home/Home.pug
@@ -10,6 +10,25 @@ div(class="home")
 							span(class="album-item__close" id="album-additions-btn-"+album.id) &times
 						div(class="album-item__title")=album.name
 						div(class="album-item__subtitle")=album.artist
-			li(class="home__album-item")="test"
 	div(class="home__tracks-container")
+		div(class="headline dark size-20")="Tracks"
+		div(class="headline light size-14")="View all"
+		ul(class="tracks-list")
+			if tracks.length > 0
+				each track in tracks
+					li(class="tracks-list__item")
+						div(class="track__avatar-container")
+							div(class="track__avatar")
+								img(class="track__avatar-img" src=track.photo alt="")
+						div(class="track__name-container")
+							div(class="track__name")
+								div(class="track__title")=track.name
+								div(class="track__subtitle")=track.artist
+
+						div(class="track__like-container")
+							button(class="track__like")
+								img(class="track__like-btn" src="/img/heart.png" alt="")
+
+						div(class="track__duration-container")
+							div(class="track__duration")=track.duration
 	div(class="home__artists-container")
