--- a/public/components/Content/Home/Home.scss
+++ b/public/components/Content/Home/Home.scss
@@ -3,8 +3,7 @@
 .home {
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(3, 1fr);
-
+  grid-template-rows: repeat(2, 1fr);
 
   &__albums-container {
     grid-row: 1/2;
@@ -12,12 +11,12 @@
   }
 
   &__tracks-container {
-    grid-row: 2/4;
+    grid-row: 2/3;
     grid-column: 1/3;
   }
 
   &__artists-container {
-    grid-row: 2/4;
+    grid-row: 2/3;
     grid-column: 3/4;
   }
 }
@@ -117,4 +116,130 @@ ul {
     text-decoration: none;
     cursor: pointer;
   }
+}
+
+.home__tracks-container {
+  padding-left: $padding-left-content;
+}
+
+.dark {
+  color: $font-color;
+}
+
+.light {
+  color: $font-light-color;
+}
+
+.size-20 {
+  font-size: 20px;
+}
+
+.size-14 {
+  font-size: 14px;
+}
+
+.headline {
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 10px;
+  height: 30px;
+  font-weight: bold;
+}
+
+.tracks-list {
+  list-style-type: none;
+  columns: 2;
+  column-gap: 30px;
+
+  &__item {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 20px;
+  }
+}
+
+.track {
+  &__avatar-container {
+    display: inline-block;
+    vertical-align: top;
+    height: 100%;
+    margin-right: 20px;
+  }
+
+  &__name-container {
+    display: inline-block;
+    vertical-align: top;
+    height: 100%;
+  }
+
+  &__like-container {
+    display: inline-block;
+    vertical-align: top;
+    height: 100%;
+    float: right;
+  }
+
+  &__duration-container {
+    display: inline-block;
+    vertical-align: top;
+    height: 100%;
+    float: right;
+    margin-right: 10px;
+  }
+
+  &__avatar-img {
+    border-radius: 5px;
+    width: 50px;
+    height: 50px;
+  }
+
+  &__avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__name {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  &__title {
+    font-size: 14px;
+    color: $font-color;
+    font-weight: bold;
+  }
+
+  &__subtitle {
+    font-size: 14px;
+    color: $font-light-color;
+    font-weight: bold;
+  }
+
+  &__like {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    outline: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+
+  &__like-btn {
+    width: 20px;
+    height: 20px;
+  }
+
+  &__duration {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
 }
