--- a/public/components/Content/Home/Home.scss
+++ b/public/components/Content/Home/Home.scss
@@ -3,7 +3,9 @@
 .home {
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  height: 100%;
 
   &__albums-container {
     grid-row: 1/2;
@@ -11,12 +13,12 @@
   }
 
   &__tracks-container {
-    grid-row: 2/3;
+    grid-row: 2/4;
     grid-column: 1/3;
   }
 
   &__artists-container {
-    grid-row: 2/3;
+    grid-row: 2/4;
     grid-column: 3/4;
   }
 }
@@ -243,3 +245,52 @@ ul {
   }
 
 }
+
+.artists-list {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+
+  &__item {
+    margin-bottom: 10px;
+    height: 100%;
+  }
+}
+
+.artist {
+  &__avatar-container {
+    display: inline-block;
+    vertical-align: top;
+    height: 100%;
+    margin-right: 50px;
+  }
+
+  &__name-container {
+    display: inline-block;
+    vertical-align: top;
+    height: 100%;
+  }
+
+  &__avatar-img {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+  }
+
+  &__name {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__name-label {
+    font-size: 20px;
+    font-weight: bold;
+    color: $font-color;
+  }
+}
+
+
