--- a/public/common/Autocomplete/Autocomplete.pug
+++ b/public/common/Autocomplete/Autocomplete.pug
@@ -1,3 +1,3 @@
-form(autocomplete="off")
-	div(class="autocomplete" style="width:400px;")
-		input(class="autocomplete-input" id="myInput" type="text" name="myCountry" placeholder="Search")
+form(autocomplete="off" class="autocomplete-container")
+	div(class=containerClassName style="width:400px;")
+		input(class=inputClassName id="autocomplete-id" type="text" placeholder="Search")
