--- a/public/common/Autocomplete/Autocomplete.scss
+++ b/public/common/Autocomplete/Autocomplete.scss
@@ -3,6 +3,10 @@
   display: inline-block;
 }
 
+.autocomplete-container {
+  height: 100%;
+}
+
 .autocomplete-input {
   border: 1px solid transparent;
   padding: 10px;
