--- a/public/components/NewHeader/NewHeader.pug
+++ b/public/components/NewHeader/NewHeader.pug
@@ -1,10 +1,6 @@
 div(class="header header-grid")
-	div(class="header__search-container table")
-		div(class="header__search-container-inner table-cell")
-			div(class="search table")
-				div(class="seach__img-container table-cell")
-					img(class="search__img" src="/img/search-purple.png" alt="img")
-				input(class="search__input" type="text" placeholder="Search")
+	div(class="header__search-container")
+		div(class="header__search-container-inner" id="search-container-id")
 	div(class="header__user-container")
 		if (!user)
 			div(class="header__link-container")
@@ -12,6 +8,8 @@ div(class="header header-grid")
 				div(class="header__link" id="login_link")="Log In"
 		else
 			div(class="header__user-container-inner")
-				div(class="user-nickname pr-10" id="profile_name")=user.nickname
+				div(class="user-nickname" id="profile_name")
+					div(class="user-nickname__inner")=user.nickname
 				div(class="user-logo")
-					img(class="user-logo__img" src=user.avatar alt="img" id="profile_avatar")
+					div(class="user-logo__img-container")
+						img(class="user-logo__img" src=user.avatar alt="img" id="profile_avatar")
