--- a/public/components/NewHeader/NewHeader.scss
+++ b/public/components/NewHeader/NewHeader.scss
@@ -34,6 +34,11 @@
   padding-left: $padding-left-content;
   padding-right: 30px;
   width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search {
@@ -42,16 +47,39 @@
   width: 100%;
   border: $border-color solid 1px;
   border-radius: 40px;
-
-  &__img-container {
-  }
+  position: relative;
 
   &__img {
+    height: 100%;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 10px;
+    margin-right: 20px;
+  }
+
+  &__img-container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  &__img_size {
     width: 20px;
     height: 20px;
   }
 
   &__input {
+    display: inline-block;
+    width: 500px;
+    height: 100%;
+  }
+
+  &__input-autocomplete {
+    height: 100%;
+    width: 500px !important;
+  }
+
+  &__input-container {
     outline: none;
     background-color: transparent;
     padding-right: 20px;
@@ -60,11 +88,9 @@
     border: none;
     float: left;
     text-align: left;
-    width: 100%;
     font-size: 16px;
     height: 100%;
-    display: table-cell;
-    vertical-align: middle;
+    width: 100%;
   }
 }
 
@@ -80,22 +106,36 @@
 }
 
 .user-nickname {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 20px;
+  height: 100%;
+}
+
+.user-nickname__inner {
   font-size: 18px;
-  vertical-align:middle;
-  display:table-cell;
-  text-align:justify;
-  padding-right: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  height: 100%;
 }
 
 .user-logo {
-  vertical-align:middle;
-  display:table-cell;
+  display: inline-block;
+  vertical-align: top;
+  height: 100%;
+
+  &__img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
 
   &__img {
     width: 40px;
     height: 40px;
-    vertical-align: middle;
     cursor: pointer;
     border-radius: 40px;
   }
