--- a/public/components/Content/Home/Home.scss
+++ b/public/components/Content/Home/Home.scss
@@ -24,226 +24,11 @@
 }
 
 .home__albums-container {
-  padding: 20px 0;
-  display: grid;
-  grid-row-gap: 20px;
-  grid-column-gap: 20px;
-  grid-template-columns: 30px 1fr 30px;
-  align-content: start;
-}
-
-.home__albums-container > * {
-  grid-column: 2 / -2;
-}
-
-.hs {
-  padding: 10px;
-  display: grid;
-  grid-gap: calc(var(--gutter) / 2);
-  grid-template-columns: repeat(15, 160px);
-  grid-template-rows: minmax(200px, 1fr);
-
-  overflow-x: scroll;
-  scroll-snap-type: x proximity;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.home__album-item {
-  scroll-snap-align: center;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-items: center;
-}
-
-.home__album-item:hover {
-  transform: scale(1.05);
-}
-
-.no-scrollbar {
-  scrollbar-width: none;
-}
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
-.album-item {
-  &__img {
-    position: relative;
-    cursor: pointer;
-    margin-bottom: 10px;
-  }
-
-  &__img-inner {
-    border-radius: 10px;
-    width: 160px;
-    height: 160px;
-    transition: .3s;
-  }
-
-  &__fix-width {
-    overflow: hidden;
-    white-space: nowrap;
-    width: 100%;
-  }
-
-  &__title {
-    font-size: 18px;
-    margin-bottom: 5px;
-    transition: .3s;
-  }
-
-  &__subtitle {
-    font-size: 14px;
-    color: $font-light-color;
-    transition: .3s;
-  }
-
-  &__close {
-    position: absolute;
-    color: $font-light-color;
-    right: 6px;
-    font-size: 28px;
-    font-weight: bold;
-  }
-
-  &__close:hover,
-  &__close:focus {
-    color: $font-color;
-    text-decoration: none;
-    cursor: pointer;
-  }
+  padding-left: $padding-left-content;
 }
 
 .home__tracks-container {
   padding-left: $padding-left-content;
-}
-
-.dark {
-  color: $font-color;
-}
-
-.light {
-  color: $font-light-color;
-}
-
-.size-20 {
-  font-size: 20px;
-}
-
-.size-14 {
-  font-size: 14px;
-}
-
-.headline {
-  cursor: pointer;
-  display: inline-block;
-  margin-right: 10px;
-  height: 30px;
-  font-weight: bold;
-}
-
-.tracks-list {
-  list-style-type: none;
-  columns: 2;
-  column-gap: 30px;
-
-  &__item {
-    width: 100%;
-    height: 50px;
-    margin-bottom: 20px;
-  }
-}
-
-.track {
-  &__avatar-container {
-    display: inline-block;
-    vertical-align: top;
-    height: 100%;
-    margin-right: 20px;
-  }
-
-  &__name-container {
-    display: inline-block;
-    vertical-align: top;
-    height: 100%;
-  }
-
-  &__like-container {
-    display: inline-block;
-    vertical-align: top;
-    height: 100%;
-    float: right;
-  }
-
-  &__duration-container {
-    display: inline-block;
-    vertical-align: top;
-    height: 100%;
-    float: right;
-    margin-right: 10px;
-  }
-
-  &__avatar-img {
-    border-radius: 5px;
-    width: 50px;
-    height: 50px;
-  }
-
-  &__avatar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__name {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  &__title {
-    font-size: 14px;
-    color: $font-color;
-    font-weight: bold;
-  }
-
-  &__subtitle {
-    font-size: 14px;
-    color: $font-light-color;
-    font-weight: bold;
-  }
-
-  &__like {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    outline: none;
-    border: none;
-    background: none;
-    cursor: pointer;
-  }
-
-  &__like-btn {
-    width: 20px;
-    height: 20px;
-  }
-
-  &__duration {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
 }
 
 .artists-list {
