update webpack config, set new staticpath

--- a/public/common/Admin/ItemList/ItemList.pug
+++ b/public/common/Admin/ItemList/ItemList.pug
@@ -16,9 +16,9 @@ div
                                 td
                                     div(class="actions")
                                         button(class="edit-btn btn_row" name="edit-btn" data-id=item.id)
-                                            img(alt="edit-icon" src="/img/admin/edit.png")
+                                            img(alt="edit-icon" src="/static/img/admin/edit.png")
                                         button(class="edit-btn btn_row" name="delete-btn" data-id=item.id)
-                                            img(alt="delete-icon" src="/img/admin/delete.png")
+                                            img(alt="delete-icon" src="/static/img/admin/delete.png")
                             else
                                 td #{item[column.dataIndex]}
             div(id="pagination")
