--- a/public/components/Lists/TrackList/TrackList.pug
+++ b/public/components/Lists/TrackList/TrackList.pug
@@ -15,7 +15,7 @@ div
 
 					div(class="track__like-container")
 						button(class="track__like")
-							img(class="track__like-btn" src="/img/heart.png" alt="")
+							img(class="track__like-btn" src="/static/img/heart.png" alt="")
 
 					div(class="track__duration-container")
 						div(class="track__duration")=track.duration
