--- a/public/components/Menu/Menu.pug
+++ b/public/components/Menu/Menu.pug
@@ -1,7 +1,7 @@
 div
 	div(class="menu-title")
 		div(class="menu-title__img")
-			img(class="logo" src="/img/record.png" alt="img")
+			img(class="logo" src="/static/img/record.png" alt="img")
 		div(class="menu-title__label" id="main_link")="Covenant"
 	ul(class="menu-list")
 		each item in defaultMenuItems
