--- a/public/components/SearchAutocomplete/SearchAutocomplete.pug
+++ b/public/components/SearchAutocomplete/SearchAutocomplete.pug
@@ -1,5 +1,5 @@
 div(class="search")
 	div(class="search__img")
 		div(class="search__img-container")
-			img(class="search__img_size" src="/img/search-purple.png" alt="img")
+			img(class="search__img_size" src="/static/img/search-purple.png" alt="img")
 	div(class="search__input" id="search-autocomplete-id")
