--- a/public/common/Kit/File/File.pug
+++ b/public/common/Kit/File/File.pug
@@ -3,7 +3,7 @@ if !asButton
 		span
 			input(type="file" style="display: none" id="file-input-id" accept=accept)
 			div
-				img(class="file-uploader__img" src="/img/plus_gray.png" alt="")
+				img(class="file-uploader__img" src="/static/img/plus_gray.png" alt="")
 				div(class="file-uploader__text")="Upload"
 else
 	div
