--- a/public/components/Content/Playlists/Playlists.pug
+++ b/public/components/Content/Playlists/Playlists.pug
@@ -5,7 +5,7 @@ div(class="content-cards")
 			div(class="card-item__img")
 				div(class="card-item__img-inner card-item__img-new")
 					div(class="plus-button" id="create-playlist-btn")
-						img(class="plus-button__img" src="/img/plus.png" alt="")
+						img(class="plus-button__img" src="/static/img/plus.png" alt="")
 		if items.length > 0
 			each item in items
 				div(class="card-item__container")
