--- a/public/views/HomeView/HomeView.pug
+++ b/public/views/HomeView/HomeView.pug
@@ -3,5 +3,5 @@ div(class="wrapper wrapper-grid" id="wrapper")
 	div(class="content-container content-container-grid")
 		div(id="header")
 		div(class="content" id="content")
-div(class="player player-grid")
+div(class="player player-grid" id="player-id")
 div(id="popup")
