--- a/public/components/Content/Home/Home.scss
+++ b/public/components/Content/Home/Home.scss
@@ -25,6 +25,7 @@
 
 .home__albums-container {
   padding-left: $padding-left-content;
+  padding-right: $padding-right-content;
 }
 
 .home__tracks-container {
