--- a/public/views/ProfileView/ProfileView.pug
+++ b/public/views/ProfileView/ProfileView.pug
@@ -6,4 +6,4 @@ div(class="wrapper" id="wrapper")
 			div(class="content-profile" id="content-profile")
 				div(class="user-info" id="user-info")
 				div(class="user-tabs" id="user-tabs")
-div(class="player player-grid")
+div(class="player")
