--- a/public/components/Player/Player.pug
+++ b/public/components/Player/Player.pug
@@ -1,30 +1,29 @@
-div
+div(class="player-grid")
 	div(class="player__info")
 		div(class="player__info-inner")
-			div(class="player__track-logo")
-				img(class="player__track-logo__img" src="./src/static/img/track.png" alt="track")
-			div(class="player__track")
-				div(class="player__track-block")
+			div(class="player__column")
+				img(class="player__track-logo__img" src="/static/img/track.png" alt="")
+			div(class="player__column")
+				div(class="player__column-container")
 					div(class="track-name")="Bleeding out"
 					div(class="artist-name")="Imagine Dragons"
-
-				div(class="player__track-block")
-					img(class="like" src="./src/static/img/heart_empty.png" alt="heart")
+			div(class="player__column")
+				img(class="like" src="/static/img/heart.png" alt="")
 	div(class="player__control")
 		div(class="player__control-block")
 			div(class="controls")
-				img(class="control-btn size-l" src="./src/static/img/shuffle.png" alt="shuffle")
-				img(class="control-btn size-s" src="./src/static/img/prev.png" alt="prev")
-				img(class="control-btn size-l" src="./src/static/img/play.png" alt="play")
-				img(class="control-btn size-s" src="./src/static/img/next.png" alt="next")
-				img(class="control-btn size-m" src="./src/static/img/repeat.png" alt="repeat")
+				img(class="control-btn size-l" src="/static/img/shuffle.png" alt="")
+				img(class="control-btn size-s" src="/static/img/prev.png" alt="")
+				img(class="control-btn size-l" src="/static/img/triangle.png" alt="")
+				img(class="control-btn size-s" src="/static/img/next.png" alt="")
+				img(class="control-btn size-m" src="/static/img/repeat.png" alt="")
 
 			div(class="progress")
 				div(class="secondary-progress")
 					div(class="primary-progress")
 	div(class="player__volume")
 		div(class="player__volume-block")
-			img(class="volume-img pull-right" src="./src/static/img/volume.png" alt="volume")
+			img(class="volume-img pull-right" src="./src/static/img/volume.png" alt="")
 
 		div(class="player__volume-block volume-w")
 			div(class="volume-progress pull-right")
