--- a/public/views/ProfileView/ProfileView.pug
+++ b/public/views/ProfileView/ProfileView.pug
@@ -1,9 +1,9 @@
-div(class="wrapper" id="wrapper")
-	div(id="menu")
+div(class="wrapper wrapper-grid" id="wrapper")
+	div(class="menu" id="menu")
 	div(class="content-container content-container-grid")
 		div(id="header")
 		div(class="content" id="content")
 			div(class="content-profile" id="content-profile")
 				div(class="user-info" id="user-info")
 				div(class="user-tabs" id="user-tabs")
-div(class="player")
+div(class="player" id="player-id")
