--- a/public/components/Player/Player.pug
+++ b/public/components/Player/Player.pug
@@ -1,14 +1,16 @@
 div(class="player-grid")
 	div(class="player__info")
-		div(class="player__info-inner")
-			div(class="player__column")
-				img(class="player__track-logo__img" src="/static/img/track.png" alt="")
-			div(class="player__column")
-				div(class="player__column-container")
-					div(class="track-name")="Bleeding out"
-					div(class="artist-name")="Imagine Dragons"
-			div(class="player__column")
-				img(class="like" src="/static/img/heart.png" alt="")
+		div(class="player__column mr-10")
+			div(class="player__column-container")
+				img(class="player__track-logo" src="/static/img/track.png" alt="")
+		div(class="player__column mr-10")
+			div(class="player__column-name")
+				div(class="track-name")="Bleeding out"
+				div(class="artist-name")="Imagine Dragons"
+		div(class="player__column")
+			div(class="player__column-container")
+				button(class="track__like")
+					img(class="track__like-btn" src="/static/img/heart.png" alt="")
 	div(class="player__control")
 		div(class="player__control-block")
 			div(class="controls")
@@ -22,9 +24,10 @@ div(class="player-grid")
 				div(class="secondary-progress")
 					div(class="primary-progress")
 	div(class="player__volume")
-		div(class="player__volume-block")
-			img(class="volume-img pull-right" src="./src/static/img/volume.png" alt="")
-
-		div(class="player__volume-block volume-w")
-			div(class="volume-progress pull-right")
-				div(class="volume-primary-progress")
+	//div(class="player__volume")
+	//	div(class="player__volume-block")
+	//		img(class="volume-img pull-right" src="/static/img/volume.png" alt="")
+	//
+	//	div(class="player__volume-block volume-w")
+	//		div(class="volume-progress pull-right")
+	//			div(class="volume-primary-progress")
