--- a/public/components/Player/Player.scss
+++ b/public/components/Player/Player.scss
@@ -13,6 +13,21 @@
   &__column {
     display: inline-block;
     vertical-align: top;
+    height: 100%;
+  }
+
+  &__column-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+  }
+
+  &__column-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
   }
 }
 
@@ -26,31 +41,9 @@
   grid-column: 1/2;
 }
 
-.player__info-inner {
-  display: table;
-  height: 100%;
-}
-
 .player__track-logo {
-  display: table-cell;
-  vertical-align: middle;
-
-  &__img {
-	width: 60px;
-	height: 60px;
-	vertical-align: middle;
-  }
-}
-
-.player__track {
-  display: table;
-  height: 100%;
-}
-.player__track-block {
-  padding-left: 20px;
-  display: table-cell;
-  vertical-align: middle;
-  text-align: left;
+  width: 60px;
+  height: 60px;
 }
 
 .track-name {
@@ -64,12 +57,6 @@
   color: $font-light-color;
   font-size: 14px;
   height: 20px;
-}
-
-.like {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
 }
 
 .player__control {
@@ -107,7 +94,6 @@
 
 .player__volume {
   grid-column: 3/4;
-  display: table;
   height: 100%;
 }
 
@@ -159,73 +145,4 @@
   width: 30%;
   background-color: $accent-color;
   height: 6px;
-}
-
-/*------------------ header end   ------------------*/
-
-
-/*------------------ form start   ------------------*/
-
-.form_background {
-  height: 100vh;
-  display: flex;
-  background-color: #00000022;
-  color: $font-color;
-}
-
-.form_wrapper {
-  margin: auto;
-  background-color: var(--form_bg);
-  border-radius: 50px;
-  padding: 5vh 15px;
-  display: flex;
-  align-items: center; /* horizontal */
-  justify-content: center; /* vertical */
-}
-
-$body_gradient_left: #7200D0;
-$body_gradient_right: #C800C1;
-$form_bg: #ffffff;
-$input_bg: #E5E5E5;
-$input_hover: #eaeaea;
-$submit_bg: #1FCC44;
-$submit_hover: #40e263;
-$icon_color: #6b6b6b;
-
-.form_inner {
-  width: 500px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 20px;
-  padding: 20% 20%;
-  background-color: #ffffff;
-  border-radius: 50px;
-}
-
-.input_label {
-  font-size: 14px;
-}
-
-.input_container:hover {
-  background-color: $input_hover;
-}
-
-.input_container {
-  height: 60px;
-  width: 100%;
-  border-bottom: solid 1px #1F2F5B;
-}
-
-.input_field {
-  /* customize the input tag with lighter font and some padding*/
-  color: $icon_color;
-  background-color: inherit;
-  width: 90%;
-  border: none;
-  font-size: 1.3rem;
-  font-weight: 400;
-  outline: none;
-}
-.text-center {
-  text-align: center;
 }
