--- a/public/components/Lists/TrackList/TrackList.scss
+++ b/public/components/Lists/TrackList/TrackList.scss
@@ -70,6 +70,11 @@
 	border-radius: 5px;
 	width: 50px;
 	height: 50px;
+	cursor: pointer;
+  }
+
+  &__avatar-img:hover {
+	transform: scale(1.05);
   }
 
   &__avatar {
@@ -95,6 +100,11 @@
 	font-size: 14px;
 	color: $font-light-color;
 	font-weight: bold;
+	cursor: pointer;
+  }
+
+  &__subtitle:hover {
+	text-decoration: underline;
   }
 
   &__like {
