--- a/public/components/Player/Player.pug
+++ b/public/components/Player/Player.pug
@@ -14,11 +14,11 @@ div(class="player-grid")
 	div(class="player__control")
 		div(class="player__control-block")
 			div(class="controls")
-				img(class="control-btn size-l" src="/static/img/shuffle.png" alt="")
-				img(class="control-btn size-s" src="/static/img/prev.png" alt="")
-				img(class="control-btn size-l" src="/static/img/triangle.png" alt="")
-				img(class="control-btn size-s" src="/static/img/next.png" alt="")
-				img(class="control-btn size-m" src="/static/img/repeat.png" alt="")
+				img(class="control-btn size-l" src="/static/img/shuffle.png" alt="" id="player-shuffle-btn")
+				img(class="control-btn size-s" src="/static/img/prev.png" alt="" id="player-prev-btn")
+				img(class="control-btn size-l" src="/static/img/triangle.png" alt="" id="player-play-btn")
+				img(class="control-btn size-s" src="/static/img/next.png" alt="" id="player-next-btn")
+				img(class="control-btn size-m" src="/static/img/repeat.png" alt="" id="player-repeat-btn")
 
 			div(class="progress")
 				div(class="secondary-progress")
