--- a/public/components/Player/Player.scss
+++ b/public/components/Player/Player.scss
@@ -57,6 +57,11 @@
   color: $font-light-color;
   font-size: 14px;
   height: 20px;
+  cursor: pointer;
+}
+
+.artist-name:hover {
+  text-decoration: underline;
 }
 
 .player__control {
@@ -73,8 +78,14 @@
 
 .control-btn {
   vertical-align: middle;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.control-btn:hover {
+  transform: scale(1.1);
 }
 
 .size-s {
