album page begin

--- a/public/components/Content/Playlists/Playlists.pug
+++ b/public/components/Content/Playlists/Playlists.pug
@@ -15,7 +15,7 @@ div(class="content-cards")
 							div(class="dropdown")
 								img(class="album-item__dots-size" src="static/img/dots.png" alt="")
 								div(class="dropdown-content")
-									p="Hello World!"
-
+									p(class="dropdown-content__item")="Remove playlist"
+									p(class="dropdown-content__item border-bottom")="Share playlist"
 					div(class="card-item__title card-item__fix-width")=item.name
 					div(class="card-item__subtitle card-item__fix-width")=item.description
