--- a/public/index.scss
+++ b/public/index.scss
@@ -82,6 +82,10 @@
     font-weight: bold;
 }
 
+.content-inner {
+    margin: 30px 0 30px 50px;
+}
+
 /*----------------frame end--------------------*/
 
 
@@ -188,6 +192,8 @@
 .btn {
     cursor: pointer;
 }
+
+
 /******************* form start *******************/
 
 .form_background {
