--- a/public/components/Content/Playlists/Playlists.scss
+++ b/public/components/Content/Playlists/Playlists.scss
@@ -113,8 +113,18 @@ div.card-item__img:hover span.card-item__dots {visibility: visible;}
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
+  border-radius: 10px;
+
+  &__item {
+	color: $font-color;
+	padding: 10px 15px;
+	border-bottom: 1px solid rgba(0,0,0,0.2);
+  }
+}
+
+.border-bottom {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .dropdown:hover .dropdown-content {
