--- a/public/index.scss
+++ b/public/index.scss
@@ -18,6 +18,7 @@
 @import "components/Lists/TrackList/TrackList";
 @import "components/Lists/AlbumScroll/AlbumScroll";
 @import "common/Kit/File/File";
+@import "components/Content/Album/Album";
 @import "components/Player/Player";
 @import "views/HomeView/HomeView";
 @import "css/admin";
